--- a/.classpath
+++ b/.classpath
@@ -8,7 +8,7 @@
 	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/connector-sdk-dist-1.2.29-dist/connector-sdk-api-1.2.29.jar"/>
 	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/connector-sdk-dist-1.2.29-dist/connector-sdk-test-util-1.2.29.jar"/>
 	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/connector-sdk-dist-1.2.29-dist/connector-sdk-util-1.2.29.jar"/>
-	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/commons-codec.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/commons-codec.jar" sourcepath="C:/Users/Ant/AppData/Local/Temp/.org.sf.feeling.decompiler1568165655087/source/commons-codec-1.8-sources.jar"/>
 	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-documenthandler-scripting.jar"/>
 	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-execution.jar"/>
 	<classpathentry kind="output" path="bin"/>
