Adding base classes

--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,121 @@
 	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-documenthandler-scripting.jar"/>
 	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-execution.jar"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/bcmail-jdk16.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/bcpg-jdk16.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/bcprov-jdk16.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/boomi-changedata.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/boomi-jetty-util.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/boomi-json-util.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/boomi-log4j-api.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/boomi-logging.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/boomi-oauth.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/boomi-queue.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/boomi-regex.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/boomi-restlet-util.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/boomi-security.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/boomi-synccache.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/boomi-util.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/com.noelios.restlet.ext.net.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/com.noelios.restlet.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/common-lite.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/common-pgp.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/common-sdk.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/commons-lang.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/commons-logging.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/common-util.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/connector-jms-41700-car.zip"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/connector-sdk-api.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/connector-sdk-dist-1.2.29-dist.zip"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/connector-sdk-dist-1.2.31-dist.zip"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/connector-sdk-dist-1.3.0-dist.zip"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/connector-sdk-dist-1.3.2-dist.zip"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/connector-sdk-dist-1.3.3-dist.zip"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/connector-sdk-dist-2.0.1-dist.zip"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/connector-sdk-internal-api.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-api-management.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-api-management-api.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-component.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-config.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-connector.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-connector-api.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-core.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-crossref.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-dataparser-api.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-dataparser-base.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-dataparser-db.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-dataparser-edi.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-dataparser-flatfile.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-dataparser-json.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-dataparser-xml.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-document-api.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-documentcache-api.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-documentcache-impl.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-documenthandler-combine.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-documenthandler-convertflatfile.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-documenthandler-datasplit.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-documenthandler-encoding.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-documenthandler-pgp.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-documenthandler-searchreplace.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-documenthandler-zip.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-document-impl.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-extended-security.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-functions.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-launcher.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-message.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-plugin.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-process.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-purge.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-queue-api.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-schedule.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-shared-server-http.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-store.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-store-api.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-transform.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/container-transform-api.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/document-sdk-api.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/dom4j.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/ehcache.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/embedded-swagger-ui.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/groovy.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/groovy-engine.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/intuit-cache.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/jackson-annotations.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/jackson-core.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/jackson-databind.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/jaxb-impl.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/jaxen.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/jaxws-rt.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/jdom.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/jetty.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/jetty-management.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/jetty-sslengine.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/jetty-util.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/json.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/lucene-core.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/mail.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/mimepull.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/model-component.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/model-connector.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/model-platform.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/org.apache.oltu.oauth2.client.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/org.apache.oltu.oauth2.common.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/org.restlet.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/resolver.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/saaj-api.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/saaj-impl.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/servlet-api.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/slf4j-api.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/slf4j-jdk14.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/sqlbuilder.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/stax-api.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/stax-ex.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/streambuffer.jar"/>
+	<classpathentry kind="lib" path="G:/My Drive/lib/boomi/wstx-asl.jar"/>
+	<classpathentry kind="lib" path="lib/commons-pool2-2.4.2.jar"/>
+	<classpathentry kind="lib" path="lib/ehcache-3.5.2.jar"/>
+	<classpathentry kind="lib" path="lib/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/jedis-2.9.0.jar"/>
+	<classpathentry kind="lib" path="lib/spymemcached-2.9.9.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
